Added Telemetry validators
Signed-off-by: Shephali Mittal <shephalm@amazon.com>